* FIX: Sync time minimized & Reorganize/Prune orphan blocks
* FIX: RPC Client & Initialization Msg
* FIX: BOOST::copy_file & STD copy_file (BOOST 1.55 compatibility)
* FIX: LoadblockIndex Initialization
* Installed: OnStartup PruneOrphanBlocks
* Installed: InitArgs Prune, Backtoblock, Rollbackchain, Clearchainfiles
* ProcessBlock() fixed Orphan handling
* FIX: Network specific .conf
* Installed: New Testnet
* FIX: PoW & PoS New Mint value (GetInfo RPC / BlockToJSON)
* Installed GetNewPOWMint & GetNewPOSMint in CWallet
* Installed: RPC Prune & Reorganize & Backtoblock, Rollbackchain, Clearchainfiles,
* FIX: MoneySupply (CBlockIndex)
* FIX: Compiling on Ubuntu 16
* Menu Items update: File -> Main, Settings -> Wallet, Added: Tools, Mining & Social Links
* Fixes from Talium coin (https://github.com/taliumtech/talium/commit/f673d50f41b4f5ee6f9e670d859a9de634620071)
* Installed: Developer Fee, 10% of block reward (Hard Fork 1)
* TurboSync 1.0.0 (2x network sync speedup, unlimited scaling)
* Installed: RPC forcesync, getpeeraverageheight
* Dynamic Checkpoints 1.0.0
* Chain Shield 1.0.0 (default check every 1 block)
* Consensus::ChainBuddy 1.0.0 (Satoshi's Vision 2.0 - Wallet & Network Consensus)
* Installed: DynamicCheckpointRecv && DynamicCheckpointSent values output from CNode to GetPeerInfo RPC
* Installed RPC: getchainshieldinfo, chainshieldenabled, getchainbuddyinfo, chainshieldenabled
* Upgraded: Firewall to 2.0.0.2
* Upgraded: Uint256 with SetNull & IsNull https://gitlab.crown.tech/Edwardmorra/crown-core/commit/c655cca28ba620bdcf90a8c540c840c736aa318d
* Installed: DynamicCoinDistribution & Upgraded ASIC Choker
* Upgraded: Blockcount GUI
* Added initial support for Android (Termux build of phcd)
* Boost 1.70 support & Berkeley 18.1.23

v1.0.0.7 (To Finish before release)
--------
* DDoS Shield & Firewall upgrades
* Masternode reward decentralization (Hard-Fork 1)
* New RPC: getasicchokerlog, blockshield, dynamiccheckpoint