@@ -50,6 +50,8 @@ INCLUDEPATHS = \
  -I "$(DEPSDIR)/include" \
  -I "$(DEPSDIR)/local" \
  -I "$(DEPSDIR)/local/BerkeleyDB.18.1/include" \
+ -I "$(BASEDIR)/home/GMP" \
+ -I "$(BASEDIR)/home/openssl" \
  -I "$(DEPSDIR)/include/boost"
 
 LIBPATHS = \
@@ -57,8 +59,6 @@ LIBPATHS = \
  -I "$(DEPSDIR)/lib" \
  -I "$(DEPSDIR)/local/lib" \
  -I "$(DEPSDIR)/lib/boost" \
- -I "$(BASEDIR)/home/GMP" \
- -I "$(BASEDIR)/home/openssl" \
  -I "$(BASEDIR)/home/boost_1_70_0/stage/lib"
 
 # *****************************************************
